--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -1,12 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
 
     <style name="LightTheme" parent="AppTheme">
@@ -20,12 +19,10 @@
         <item name="title_color">@color/title_color</item>
         <item name="screen_back">@color/screen_back</item>
         <item name="cardBack">@color/cardBack</item>
+        <item name="android:windowLightStatusBar">true</item>
         <item name="blacknwhite">@color/blacknwhite</item>
         <item name="switchGrey">@color/switchGrey</item>
         <item name="green_color">@color/green_color</item>
-        <item name="back_start">@color/back_start</item>
-        <item name="back_end">@color/back_end</item>
-        <item name="back_center">@color/back_center</item>
         <item name="whitenblack">@color/whitenblack</item>
         <item name="button_back">@color/button_back</item>
         <item name="background">@color/background</item>
@@ -45,15 +42,10 @@
         <item name="whitenblack">@color/whitenblackDark</item>
         <item name="title_color">@color/title_colorDark</item>
         <item name="screen_back">@color/screen_backDark</item>
-        <item name="back_start">@color/back_startDark</item>
-        <item name="back_end">@color/back_endDark</item>
-        <item name="back_center">@color/back_centerDark</item>
         <item name="button_back">@color/button_backDark</item>
         <item name="green_color">@color/green_colorDark</item>
         <item name="background">@color/backgroundDark</item>
         <item name="switchGrey">@color/switchDark</item>
         <item name="colorHigh">@color/colorHighDark</item>
     </style>
-
-
 </resources>
