--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:id="@+id/rootView"
         android:background="?attr/screen_back"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -163,7 +164,6 @@
                         android:layout_marginTop="16dp"
                         android:paddingBottom="2dp"
                         android:layout_marginLeft="16dp"
-                        android:layout_marginBottom="16dp"
                         android:layout_height="0dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/textBrowseAll"/>
