--- a/app/src/main/res/layout/event_card_item.xml
+++ b/app/src/main/res/layout/event_card_item.xml
@@ -12,6 +12,7 @@
                 app:cardBackgroundColor="?attr/cardBack"
                 android:layout_margin="4dp"
                 app:cardCornerRadius="2dp"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +41,7 @@
                                 android:layout_height="280dp"
                                 android:contentDescription="TODO"
                                 android:scaleType="centerCrop"
+                                android:foreground="@drawable/image_background"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,6 +57,7 @@
                                 android:layout_marginBottom="8dp"
                                 android:textSize="16sp"
                                 android:padding="6dp"
+                                android:textStyle="bold"
                                 android:textColor="@android:color/white"
                                 android:layout_marginLeft="8dp"
                                 android:layout_marginRight="8dp"
@@ -65,6 +68,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="@string/title"
                                 android:textSize="12sp"
+
                                 android:padding="8dp"
                                 android:layout_marginTop="6dp"
                                 android:textColor="@android:color/white"
@@ -93,6 +97,9 @@
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
                         android:layout_marginTop="8dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:maxEms="11"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/frameLayout"
                         android:id="@+id/event_time"/>
@@ -103,11 +110,14 @@
                         android:text="@string/title"
                         android:layout_marginBottom="4dp"
                         android:textSize="14sp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:maxEms="11"
                         android:padding="6dp"
                         android:textColor="?attr/blacknwhite"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="2dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/event_time"
                         android:id="@+id/event_venue"/>
@@ -123,7 +133,7 @@
                         android:textColor="?attr/blacknwhite"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="2dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/event_venue"
                         android:id="@+id/event_price"/>
