--- a/app/src/main/res/layout/horizontal_event_card.xml
+++ b/app/src/main/res/layout/horizontal_event_card.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="300dp"
-        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_height="330dp" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
             android:id="@+id/feed_card"
@@ -10,6 +10,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_margin="4dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardBackgroundColor="?attr/cardBack"
             app:cardCornerRadius="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,6 +29,7 @@
                     android:id="@+id/frameLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
 
@@ -107,8 +109,7 @@
                     android:textColor="?attr/blacknwhite"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="4dp"
-                    app:layout_constraintBottom_toTopOf="@id/event_price"
+                    android:layout_marginTop="2dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/event_time"
                     android:id="@+id/event_venue"/>
